Fix spacing on comments and add forgotten timeline graphic

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -338,6 +338,10 @@ body {
   color: #CCC;
 }
 
+hr {
+  margin: .5em;
+}
+
 #footer {
   height: 30px;
 }
